[package]
name = "infod_common"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "*"
color-eyre = "*"
env_logger = "*"
tracing = "*"
tracing-subscriber = "*"
chacha20poly1305 = "0.10.1"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.105"
toml = "0.7.7"
sha2 = "0.10.7"
libc = "0.2.148"
