[package]
name = "infod_server"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Server for infod."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "*"
color-eyre = "*"
env_logger = "*"
tracing = "*"
tracing-subscriber = "*"
rand = "0.8.5"
infod_common = { path = "../infod_common" }

[package.metadata.generate-rpm]
require-sh = false

[[package.metadata.generate-rpm.assets]]
dest = "/usr/sbin/infod_server"
mode = "555"
source = "target/release/infod_server"

[[package.metadata.generate-rpm.assets]]
dest = "/etc/systemd/system/infod-server.service"
mode = "600"
source = "infod-server.example.service"
config = true

[[package.metadata.generate-rpm.assets]]
dest = "/etc/infod/config.example.toml"
mode = "600"
source = "config.example.toml"
config = true
